--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/{author}"
-@model Chirp.Web.UserTimelineModel
+@model Chirp.Web.Razor.UserTimelineModel
 @{
     ViewData["Title"] = "Chirp!";
     Layout = "./Shared/_Layout.cshtml";
