--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -4,7 +4,94 @@
     ViewData["Title"] = "Chirp!";
     Layout = "./Shared/_Layout.cshtml";;
 }
+<div class = "navbar">
+        <!-- Defines the 'pagelist' which will function as a way to navigate
+        simply by using numbers in the bottom of a page-->
+        <ul class="pagelist">
+            @for(int i = 0; i <= Model.count / 32; i++){
+                if(Model.currentPage == 0){
+                    if(i > Model.currentPage + 3){
+                        if(i == Model.lastPage){
+                            <fill>..</fill>
+                            <li onclick = "location.href = '/?page=@i'" > @i</li>
+                        }
+                    } else if(Model.currentPage == i){
+                        <li id = "current" onclick = "location.href = '/?page=@i'" > @i</li>
+                    }else{
+                         <li onclick = "location.href = '/?page=@i'" > @i</li>
+                    }
 
+
+
+                }else if (Model.currentPage == Model.lastPage){
+                     if(i < Model.currentPage - 3){
+                        if(i == 0){
+                            <li onclick = "location.href = '/?page=@i'" > @i</li>
+                            <fill>..</fill>
+                        }
+                    } else if(Model.currentPage == i){
+                        <li id = "current" onclick = "location.href = '/?page=@i'" > @i</li>
+                    }else{
+                         <li onclick = "location.href = '/?page=@i'" > @i</li>
+                    }
+
+
+
+                }else{
+                    if(i > Model.currentPage + 2 || i < Model.currentPage -2){
+                        if(i == Model.lastPage){
+                            if(Model.currentPage + 3 < Model.lastPage){
+                                <fill>..</fill>
+                            }
+                            <li onclick = "location.href = '/?page=@i'" > @i</li>
+
+                        } else if(i == 0){
+                            <li onclick = "location.href = '/?page=@i'" > @i</li>
+                            if(Model.currentPage - 3 > 0){
+                                <fill>..</fill>
+                            }
+                        }
+                    } else if(Model.currentPage == i){
+                        <li id = "current" onclick = "location.href = '/?page=@i'" > @i</li>
+                    } else{
+                        <li onclick = "location.href = '/?page=@i'" > @i</li>
+                    }
+                }
+            }
+        </ul>
+
+
+        <div class = "buttons">
+        <!-- Defines the 'prev' button which will function as a way to go to the
+        previous page by clicking on it-->
+        @if(Model.currentPage != 0){
+            <a href = "/?page=@Model.previousPage">
+                <button class = "left" id = "button"> 
+                    <img src="/images/arrow.png" class = "arrowRight"/>
+                </button>
+            </a>
+        }else{
+            <button class = "left" id = "limit"> 
+                <img src="/images/arrow.png" class = "arrowRight"/>
+            </button>
+        }
+
+        <!-- Defines the 'next' button which will function as a way to go to the
+        next page by clicking on it-->
+        @if(Model.currentPage != Model.lastPage){
+            <a href = "/?page=@Model.nextPage">
+                <button class = "right" id = "button">
+                    <img src="/images/arrow.png" class = "arrow"/>
+                </button>
+            </a>
+        } else{
+            <button class = "right" id = "limit">
+                <img src="/images/arrow.png" class = "arrow"/>
+            </button>
+        }
+        </div>
+
+    </div>
 
 <div>
     <h2> Public Timeline </h2>
@@ -27,68 +114,7 @@
                 </li>
             }
         </ul>
-
-
-
-        <!-- BOTTOM OF PAGE -->
-
-        <div class = "PageNavigation">
-
-        <!-- Defines the 'prev' button which will function as a way to go to the
-        previous page by clicking on it-->
-         @if(Model.currentPage != 0){
-            <a href = "/?page=@Model.previousPage">
-                <button class = "left" id = "button"> 
-                    <img src="/images/arrow.png" class = "arrowRight"/>
-                    Prev
-                </button>
-            </a>
-         }else{
-            <button class = "left" id = "limit"> 
-                <img src="/images/arrow.png" class = "arrowRight"/>
-                    Prev
-            </button>
-         }
-
-
-        <!-- Defines the 'pagelist' which will function as a way to navigate
-        simply by using numbers in the bottom of a page-->
-            <div id="pagelist">
-                @for(int i = 0; i <= Model.count / 32; i++)
-                    {
-                        @if(i > Model.currentPage + 3 || i < Model.currentPage -3){
-                            @if(i == Model.lastPage){
-                               <fill>..</fill>
-                               <a href="/?page=@i">@i</a>
-                            } else if(i == 0){
-                                 <a href="/?page=@i">@i</a> <fill>..</fill>
-                            }
-                        } else if(Model.currentPage == i){
-                             <a href="/?page=@i" id = 'current'>@i</a>
-                         } else{
-                            <a href="/?page=@i">@i</a> 
-                     }
-                }
-            </div>
-
-        <!-- Defines the 'next' button which will function as a way to go to the
-        next page by clicking on it-->
-            @if(Model.currentPage != Model.lastPage){
-                <a href = "/?page=@Model.nextPage">
-                    <button class = "right" id = "button">
-                        Next
-                        <img src="/images/arrow.png" class = "arrow"/>
-                    </button>
-                </a>
-            } else{
-                <button class = "right" id = "limit">
-                    Next
-                    <img src="/images/arrow.png" class = "arrow"/>
-                </button>
-            }
-        </div>
-    }
-    else
+    }else
     {
         <em>There are no cheeps so far.</em>
     }
