--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -371,6 +371,7 @@ ul.nav li a:hover {
   align-items: center;
   right: 0;
   left: 0;
+  top: 100px;
   border-bottom: 2px solid black;
   border-top: 2px solid black;
   background-color:#D4D4D4;
