Grid layout added to css, with demoversion of all elements (timeline overview, pagelist, buttons). CO-Author: ChatGPT

--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -5,6 +5,10 @@
     Layout = "./Shared/_Layout.cshtml";;
 }
 <div class = "navbar">
+
+    <div class = "pages">
+        <a href = "/">public timeline</a>
+    </div>
         <!-- Defines the 'pagelist' which will function as a way to navigate
         simply by using numbers in the bottom of a page-->
         <ul class="pagelist">
@@ -89,9 +93,9 @@
                 <img src="/images/arrow.png" class = "arrow"/>
             </button>
         }
-        </div>
+     </div>
 
-    </div>
+</div>
 
 <div>
     <h2> Public Timeline </h2>
