--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -10,7 +10,7 @@ a{
 }
 
 a:hover {
-  color: #d4d4d4b3;
+  color: #424242;
 }
 
 input[type="email"],
@@ -366,21 +366,19 @@ ul.nav li a:hover {
 
 .navbar{
   position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns:1fr 1fr 1fr;
+  grid-template-rows: 50px;
+  padding: 0 15px;
+  justify-items: center;
   right: 0;
   left: 0;
   top: 100px;
   border-bottom: 2px solid black;
   border-top: 2px solid black;
   background-color:#D4D4D4;
-  height: 30px;
   z-index: 999;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  align-items: center
 }
 /*USED FOR THE BUTTONS SIZE AND POSITION*/
 /*
@@ -409,11 +407,15 @@ ul.nav li a:hover {
   width: 30px;
   border-radius: 50%;
   height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttons{
   display: flex;
   justify-content: space-between;
+  justify-self: end;
   width: 70px;
 }
 
@@ -433,18 +435,7 @@ ul.nav li a:hover {
   height: 25px;
   cursor:initial;
 }
-/*FOR BUTTON LEFT*/
-.left{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-/*FOR BUTTON RIGHT*/
-.right{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
 
 .arrow{
   position: relative;
@@ -469,16 +460,15 @@ fill{
 .navbar ul li{
   display: inline-block;
   margin: 0 auto;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border-style:solid;
   border-width:1px;
   border-radius: 2px;
   border-color: rgba(152, 152, 152, 0.353);
   text-align: center;
   font-weight: 500;
-  text-align: center;
-  line-height: 25px;
+  line-height: 20px;
   cursor: pointer;
 }
 
@@ -488,16 +478,34 @@ fill{
 
 .pagelist{
   display: flex;
-  border: 2px solid rgba(175, 175, 175, 0.748);
+  border: 1.5px solid rgba(175, 175, 175, 0.748);
   padding: 7px;
   font-size: 10px;
-  display: flex;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
+  align-self: center;  
   border-radius: 10px;
-  width: 250px;
+  width: 200px;
   background: white;
+  justify-self: center;
 }
+
+.pages{
+  justify-self: left;
+  cursor: pointer;
+  font-size: 12px;
+}
+
+.pages a{
+  color: rgb(67, 67, 67);
+  font-weight: bolder;
+}
+
+.pages a:hover{
+  color: rgb(64, 144, 205);
+}
+
+
 
 #current{
   background: rgb(64, 144, 205);
