--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -569,7 +569,8 @@ fill{
   padding: 7px;
   font-size: 10px;
   justify-content: space-between;
-  align-items: center; 
+  align-items: center;
+  align-self: center;  
   border-radius: 10px;
   width: 200px;
   background: white;
