Demo design for cheeps and rest of page

--- a/src/Chirp.Web/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Web/Pages/UserTimeline.cshtml
@@ -8,6 +8,9 @@
 
 <div>
     <div class = "navbar">
+        <div class = "pages">
+            <a href = "/">public timeline</a>
+        </div>
         <!-- Defines the 'pagelist' which will function as a way to navigate
         simply by using numbers in the bottom of a page-->
         <ul class="pagelist">
