Added non functioning dropbox for 'searchbar' - partial co-authors, CO-Author: https://www.youtube.com/watch?app=desktop&v=pttdiqaB1xE

--- a/src/Chirp.Web/Pages/Public.cshtml
+++ b/src/Chirp.Web/Pages/Public.cshtml
@@ -2,7 +2,7 @@
 @model Chirp.Web.PublicModel
 @{
     ViewData["Title"] = "Chirp!";
-    Layout = "./Shared/_Layout.cshtml";;
+    Layout = "./Shared/_Layout.cshtml";
 }
 <div class = "navbar">
 
