--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -7,11 +7,33 @@
 </head>
 <body>
      <h1 class = "header">
-        <box onclick = "window.location = '/?page=0'">
-            <img src="/images/icon1.png" class = "Icon" alt="Icon1"/>
-        </box>
+            <img src="/images/icon1.png" onclick = "window.location = '/?page=0'" class = "Icon" alt="Icon1"/>
+        <form>
+            <div class = "searchbar">
+                <input class = "search-input" type="search" placeholder = "Search">
+                <div class = "search-menu">
+                    <div class = "search-items">
+                        <span>sup</span>
+                        <br>
+                        <span>sup</span>
+                        <br>
+                        <span>sup</span>
+                        <br>
+                        <span>sup</span>
+                        <br>
+                        <span>sup</span>
+
+                    </div>
+                </div>
+                <img src="/images/filter.png">
+            </div>
+        </form>
     </h1>
     
+    @if(true){
+
+    }
+
     <div class=page>
         <div class=body>
             @RenderBody()
