Added non functioning dropbox for 'searchbar' - partial co-authors, CO-Author: https://www.youtube.com/watch?app=desktop&v=pttdiqaB1xE

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -29,6 +29,10 @@
         <div class = "login"> Log in</div>
     </h1>
     
+    @if(true){
+
+    }
+
     <div class=page>
         <div class=body>
             @RenderBody()
