Demoversion of search results withing the dropbox

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -13,15 +13,19 @@
                 <input class = "search-input" type="search" placeholder = "Search">
                 <div class = "search-menu">
                     <div class = "search-items">
-                        <span>sup</span>
-                        <br>
-                        <span>sup</span>
-                        <br>
-                        <span>sup</span>
-                        <br>
-                        <span>sup</span>
-                        <br>
-                        <span>sup</span>
+                        <a>
+                            <span>sup</span>
+                            <span>gang gang</span>
+                        </a>
+                        
+                        <a>
+                            <span>sup</span>
+                            <span>sup</span>
+                        </a>
+                        <a>
+                            <span>sup</span>
+                            <span>sup</span>
+                        </a>
 
                     </div>
                 </div>
