Added login button design

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,8 @@
                 <img src="/images/filter.png">
             </div>
         </form>
+
+        <div class = "login"> Log in</div>
     </h1>
     <div class=page>
         <div class=body>
