--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -527,6 +527,15 @@ fill{
   background: unset;
 }
 
+.login{
+  position: relative;
+  display:flex;
+  font-size: 20px;
+  justify-self: right;
+  letter-spacing: 0px;
+  cursor: pointer;
+}
+
 .filter{
   position: absolute;
   cursor: pointer;
