Added demo version and nonfunctioning filter major

--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,19 @@
                     </div>
                     }
                 </div>
-                <img src="/images/filter.png">
+                <div class = "filter">
+                    <button type = "button" id = "filterimage">
+                        <img src="/images/filter.png">
+                    </button>
+                    <div class = "filter-options">
+                        <button>Author</button>
+                        <button>Email</button>
+                        <button>Cheep</button>
+
+                    </div>
+                </div>
+
+                
             </div>
         </form>
 
