--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -162,7 +162,7 @@ div.page ul.cheeps li{
   min-height: 60px;
   width: auto;
   width: 95%;
-  max-width: 1000px;
+  max-width: 1500px;
   word-wrap: break-word;
   overflow-wrap: break-word;
   display: flex;
@@ -420,7 +420,6 @@ ul.nav li a:hover {
   height: 30px;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .buttons{
@@ -477,14 +476,65 @@ fill{
   width: 300px;
 }
 
-.searchbar img{
+.filter{
   position: absolute;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  left: 100%;
+  justify-content:center;
+  align-items: center;
+  padding: 0px;
+}
+
+.filter #filterimage{
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+  cursor: pointer;
+  width: 40px;
+  height: 30px;
+}
+
+.filter button img{
+  position: relative;
   width: 17px;
   height: 17px;
-  padding-left: 5px;
-  left: 100%;
-  cursor: pointer;
 }
+
+.filter-options{
+  opacity: 0;
+  position: absolute;
+  visibility: hidden;
+  background-color:rgb(148, 149, 148);
+  display: flex;
+  justify-content: left;
+  flex-direction: column;
+  width: 100px;
+  padding: 0px;
+  top: 100%;
+}
+
+.filter-options button{
+  display: flex;
+  justify-content: flex-start;
+  background: none;
+  cursor: pointer;
+  width: 100px;
+  height: 30px;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+
+}
+
+.filter button:focus + .filter-options{
+  opacity: 1;
+  visibility: visible;
+}
+
 
 .searchbar input:focus + .search-menu{
   display:block;
@@ -537,14 +587,6 @@ fill{
   justify-self: right;
   letter-spacing: 0px;
   cursor: pointer;
-}
-
-.filter{
-  position: absolute;
-  cursor: pointer;
-  width: 20px;
-  height: 20px;
-  right: 200px;
 }
 
 .navbar ul li{
