--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -1,457 +1,49 @@
-body {
-  background: #ffffff;
-  font-family: 'Trebuchet MS', sans-serif;
-  font-size: 14px;
-  padding-top: 92px;
+header, .brand {
   display: flex;
-  justify-content: center;
-  margin-inline: 2rem;
-}
-
-a{
-  color: #4b1515;
-}
-
-a:hover {
-  color: rgb(64, 144, 205);
-}
-
-input[type="email"],
-input[type="text"],
-input[type="tel"],
-input[type="password"] {
-    background: white;
-    border: 1px solid #e6c0bf;
-    padding: 2px;
-    font-family: 'Trebuchet MS', sans-serif;
-    font-size: 14px;
-    border-radius: 2px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    color: #571010;
-}
-
-input[type="submit"] {
-  background: #571010;
-  border: 1px solid #3b0707;
-  padding: 1px 3px;
-  font-family: 'Trebuchet MS', sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-  border-radius: 2px;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  color: white;
-}
-
-div.page {
-  float:left;
-  background: WHITE;
-  width: auto;
-  width: 90%;
-  min-width: 500px;
-  margin: 70px auto;
-}
-
-/*IS USED FOR THE TITELS - "PUBLIC TIMELINE" ">@USER TIMELINE"*/
-div.page h2 {
-  display: flex;
-  justify-content: left;
-  margin: 0 0 15px 0;
-  color: #010000a5;
-  text-shadow: 0 1px 2px #ccc;
-  border: 3px solid #010000a5;
-  border-radius: 2px;
-  border-left: #571010;
-  border-right: #571010;
-  border-top:#571010;
-  border-radius: 0px;
-
-}
-
-/*IS USED FOR PADDING WITHIN THE TIMELINE*/
-div.page div.body {
-  padding: 10px;
-}
-
-/*IS USED FOR FOOTER*/
-div.page div.footer {
-  background: #eee;
-  color: #888;
-  padding: 5px 10px;
-  font-size: 12px;
-}
-
-/*USED FOR MAKING CHEEPS FIT "NICELY" IN TIMELINE*/
-div.page ul.cheeps {
-  display: flex;
-  flex-direction: column;
-  align-items:left;
-  list-style: none;
-  padding: 0;
-}
-
-/*USED MOSTLY FOR COLOR AND STYLE WITHIN A CHEEP - (breaks words as well)*/
-div.page ul.cheeps li{
-  position: relative;
-  margin: 10px 0;
-  padding: 6px 9px 6px;
-  min-height: 60px;
-  width: auto;
-  width: 95%;
-  max-width: 1500px;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(187, 187, 187, 0.195);
-}
-
-div.page ul.cheeps li::before{
-content : "";
-border-top: 2px solid rgba(255, 0, 0, 0.500);
-border-left: 2px solid rgba(0, 0, 0, 0.500);
-height: 12px;
-width: 12px;
-position: absolute;
-left: -1px;
-top: -1px;
-}
-
-div.page ul.cheeps li::after{
-content : "";
-border-bottom: 2px solid rgba(255, 0, 0, 0.500);
-border-right: 2px solid rgba(0, 0, 0, 0.560);
-height: 12px;
-width: 12px;
-position: absolute;
-right: -1px;
-bottom: -1px;
-}
-
-/*DEFINES MARGINS OF THE DIFFERENT TEXTS WITHIN CHEEP - (between author and message mainly)*/
-div.page ul.cheeps p {
-  margin: 0;
-}
-
-/*IS USED FOR THE SIZES OF THE BUTTONS AND MORE*/
-button {
-    border: none;
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
+  flex-direction: row;
+  align-items: center;
+  left: 0;
+  gap: 20px;
+  margin-left: 10px;
 }
 
 /*USED FOR THE BIRDS SIZE*/
-.Icon{
+#icon{
   display: flex;
   cursor: pointer;
   width: 60px;
   height: 55px;
-  justify-self: left;
+  justify-content: center;
 }
-/*STYLING AND POSITION FOR THE "CHIRP" HEADER*/
-.header{
-  /*Position for the header --> Fixes position to the top of the page*/
+
+.title {
   position: fixed;
-  display: grid;
-  grid-template-columns:1fr 1fr 1fr;
-  justify-items: center;
+  width: 100%;
+  background-color: rgb(153, 153, 153);
+  padding: 20px;
   top: 0;
-  right: 0;
-  left: 0;
-  z-index: 999;
-  margin: 0;
-  
-  /*Text styling*/
-  letter-spacing: 2px;
-  font-size: 70px;
-  font-weight: heavy;
-  padding: 10px 14px;
-  align-items: center;
-
-  /*Box style*/
-  border-bottom: 2px solid black;
-  background-color:#D4D4D4;
-  height: 70px;
 }
 
-.navbar{
-  position: fixed;
-  display: grid;
-  grid-template-columns:1fr 1fr 1fr;
-  grid-template-rows: 50px;
-  padding: 0 15px;
-  justify-items: center;
-  align-items: center;
-  right: 0;
-  left: 0;
-  top: 90px;
-  border-bottom: 1.5px solid black;
-  border-top: 1.5px solid black;
-  background-color:#D4D4D4;
-  z-index: 998;
-}
-
-.left:hover{
-  color: black;
-}
-
-
-/*USED FOR THE BUTTONS STYLE + CONTENT POSITIONING*/
-#button{
+.tag {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
-  border-width:1.5px;
-  border-style:solid;
-  border-color: rgba(0, 0, 0, 0.522);
-  color: #D4D4D4;
-  padding: 10px;
-  width: 30px;
-  border-radius: 50%;
-  height: 30px;
-  display: flex;
+  gap: 5px;
   align-items: center;
 }
 
-.buttons{
-  display: flex;
-  justify-content: space-between;
-  justify-self: end;
-  width: 70px;
-}
-
-#button:hover{
-  background: rgb(207, 207, 207);
-}
-
-#limit{
-  visibility: hidden;
-  justify-content: center;
-  color: #D4D4D4;
-  border-style:solid;
-  border-width:2px;
-  padding: 10px;
-  width: 30px;
-  border-radius: 15px;
-  height: 25px;
-  cursor:initial;
-}
-
-
-.arrow{
-  position: relative;
-  left: 1px;
-  width: 30px;
-  height: 15px;
-}
-
-.arrowRight{
-  position: relative;
-  right: 1px;
-  width: 30px;
-  height: 15px;
-  transform: scaleX(-1);
-}
-
-fill{
-  color: #452a238d;
-  font-size: 10px;
-}
-
-.searchbar{
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  justify-self: center;
-  width: 300px;
-}
-
-.filter{
-  position: absolute;
-  display: flex;
-  width: 30px;
-  height: 30px;
-  left: 100%;
-  justify-content:center;
-  align-items: center;
-  padding: 0px;
-}
-
-.filter #filterimage{
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: none;
-  cursor: pointer;
-  width: 40px;
-  height: 30px;
-}
-
-.filter button img{
-  position: relative;
-  width: 17px;
-  height: 17px;
-}
-
-.filter-options{
-  opacity: 0;
-  position: absolute;
-  visibility: hidden;
-  background-color:rgb(148, 149, 148);
-  display: flex;
-  justify-content: left;
-  flex-direction: column;
-  width: 100px;
-  padding: 0px;
-  top: 100%;
-}
-
-.filter-options button{
-  display: flex;
-  justify-content: flex-start;
-  background: none;
-  cursor: pointer;
-  width: 100px;
-  height: 30px;
-  border-color: black;
-  border-style: solid;
-  border-width: 2px;
-
-}
-
-.filter button:focus + .filter-options{
-  opacity: 1;
-  visibility: visible;
-}
-
-
-.searchbar input:focus + .search-menu{
-  display:block;
-  opacity: 1;
-  visibility: visible;
-}
-
-.search-menu{
-  opacity: 0;
-  visibility: hidden;
-  width: 93.5%;
-  padding: 5px 10px;
-  color: #000000;
-  background-color: #ffffff;
-  border-radius: 4px;
-  font-size: 14px;
-  box-shadow: 0 0 10px rgba(0, 0, 0,0.3);
-  position: absolute;
-  top: 100%;
-  left: 0;
-  z-index: 999;
-  min-height: 25px;
-  transition: 0.4s all ease;
-}
-
-.search-menu:hover{
-  display:block;
-}
-
-.search-input{
-  height: 30px;
-  border-radius: 5px;
-  width: 100%
-}
-
-.search-items a{
-  display: flex;
-  justify-content: space-between;
-}
-
-.search-items span{
-  font-size: 12px;
-  background: unset;
-}
-
-.login{
-  position: relative;
-  display:flex;
-  font-size: 20px;
-  justify-self: right;
-  letter-spacing: 0px;
-  cursor: pointer;
-}
-
-.navbar ul li{
-  display: inline-block;
-  margin: 0 auto;
+.tag #icon {
   width: 20px;
   height: 20px;
-  border-style:solid;
-  border-width:1px;
-  border-radius: 2px;
-  border-color: rgba(152, 152, 152, 0.353);
-  text-align: center;
-  font-weight: 500;
-  line-height: 20px;
-  cursor: pointer;
 }
 
-.navbar ul li:hover{
-  background: rgb(64, 144, 205);
-}
-
-.pagelist{
-  display: flex;
-  border: 1.5px solid rgba(175, 175, 175, 0.748);
-  padding: 7px;
-  font-size: 10px;
-  justify-content: space-between;
-  align-items: center; 
-  border-radius: 10px;
-  width: 200px;
-  background: white;
-  justify-self: center;
-}
-
-.pages{
-  justify-self: left;
-  cursor: pointer;
-  font-size: 12px;
-}
-
-.pages a{
-  color: rgb(67, 67, 67);
-  font-weight: bolder;
-}
-
-.pages a:hover{
-  color: rgb(64, 144, 205);
-}
-
-
-
-#current{
-  background: rgb(64, 144, 205);
-}
-
-/*MAKES THE STRUCTURE WITHIN THE CHEEPS INTO COLUMN*/
-div.page ul.cheeps li .cheep-content {
+.cheep-container {
+  gap: 100px;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  gap: 100px;
 }
 
-/*GIVES A SMALL MARGIN BETWEEN MESSAGE AND AUTHOR*/
-div.page ul.cheeps li .author {
-  font-weight: bold;
-  margin-bottom: 1px;
-}
-
-/*LOCATION AND STYLING FOR THE DATE*/
-div.page ul.cheeps li .date {
-  align-self: flex-end;
-  font-size: 0.9em;
-  color: #00000084;
-  /*makes sure message doesn't go over it*/
-  margin-top: 11px;
+.cheep-item {
+  
 }
