--- a/src/Chirp.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Chirp.Web/Pages/Shared/_Layout.cshtml
@@ -20,8 +20,9 @@
         </nav>
     </div>
 
-
-@RenderBody()
+    <main class="cheep-container"">
+        @RenderBody()
+    </main>
 
 </body>
 @await RenderSectionAsync("Scripts", required: false)
