--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -5,6 +5,7 @@ header, .brand {
   left: 0;
   gap: 20px;
   margin-left: 10px;
+  margin-block: 0;
 }
 
 /*USED FOR THE BIRDS SIZE*/
@@ -14,14 +15,20 @@ header, .brand {
   width: 60px;
   height: 55px;
   justify-content: center;
+  margin-inline: 0;
 }
 
 .title {
-  position: fixed;
   width: 100%;
-  background-color: rgb(153, 153, 153);
   padding: 20px;
+  display: flex;
   top: 0;
+  background-color: gray;
+  position: fixed;
+  font-size: 20px;
+  flex-direction: column;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .tag {
@@ -38,12 +45,33 @@ header, .brand {
 }
 
 .cheep-container {
-  gap: 100px;
   display: flex;
   flex-direction: column;
-  gap: 100px;
+  gap: 20px;
+  margin-top: 200px;
+
+}
+
+@media only screen and ( min-width: 850px ) {
+  .cheep-container {
+    width: 850px;
+    flex-direction: column;
+  }
 }
 
 .cheep-item {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(160, 160, 160, 0.335);
+  padding: 20px;
+  border-radius: 20px;
+}
+
+span .cheep-date {
   
+}
+
+.cheep-author {
+  text-decoration: underline;
+  cursor: pointer;
 }
